fix: hr spacing, add gh link

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ body {
 
 hr {
   inline-size: 75%;
-  margin-inline: auto;
+  margin: var(--space-md) auto;
   border: var(--space-xxs) solid var(--fg);
 }
 
@@ -82,6 +82,7 @@ h2 {
   list-style: none;
   padding: 0;
   margin: var(--space-md) 0;
+  margin-bottom: var(--space-xl);
 }
 
 .social-links li {
